see if changing overflow stops flickering scroll

--- a/packages/interface/src/components/interface-skeleton/style.scss
+++ b/packages/interface/src/components/interface-skeleton/style.scss
@@ -83,7 +83,7 @@ html.interface-interface-skeleton__html-container {
 	// Beyond the medium breakpoint, we allow the sidebar.
 	// The sidebar should scroll independently, so enable scroll here also.
 
-	overflow: auto;
+	overflow: visible;
 
 }
 
